# Devnexes-RecoLab

./: .gitignore  AGENTS.md  README.md  pdf_content.md
.openclaude/: README.md
.specify/templates/: technical-acquisition-record.md
history/adr/: 001-data-technology-stack-week-1.md  002-evaluation-methodology-week-1.md  003-model-persistence-and-testing-week-1.md
history/prompts/constitution/: 001-project-constitution.creation.constitution.prompt.md  002-ai-tool-policy-update.constitution.prompt.md
history/prompts/general/: 003-gitignore-structure-visibility.general.prompt.md
history/prompts/week-1/: 004-week-1-sdd-creation.plan.prompt.md  005-week-1-sdd-refinement.plan.prompt.md  006-day-1-implementation-completion.impl.prompt.md  007-day-2-audit-fix-and-commit.plan.prompt.md  008-audit-and-pdf-compliance-review.general.prompt.md  009-recommender-audit-and-phr-setup.general.prompt.md  010-day2-ranking-metrics-impl.general.prompt.md
history/validation/: day-1-completion-ivp-report.md  day-1-ivp-report.md  day-2-audit-compliance.md  day-2-audit-recommender.md  day-2-audit-sdd-quality.md  day-2-ivp-report.md
learning/week-1/: technical-acquisition-record-day2.md  technical-acquisition-record.md
recolab-hybrid-recommender/: .gitignore  MANUAL_TESTING_GUIDE.md  README.md  pyproject.toml
recolab-hybrid-recommender/.github/workflows/: ci.yml
recolab-hybrid-recommender/data/analysis/: data_analysis_summary.txt
recolab-hybrid-recommender/data/split_datasets/: test.csv  train.csv
recolab-hybrid-recommender/notebooks/: data_analysis.py  data_split.py
recolab-hybrid-recommender/src/recolab/: __init__.py  baseline.py  metrics.py  persistence.py  split.py
recolab-hybrid-recommender/tests/: test_baseline.py  test_metrics.py  test_persistence.py
specs/recolab/: README.md  architecture-reference.md  plan.md  spec.md  tasks.md
specs/week-1/: plan.md  spec.md  tasks.md
